--- a/package.json
+++ b/package.json
@@ -72,20 +72,20 @@
     "axios-retry": "^1.2.0",
     "crypto-js": "^3.1.9-1",
     "url": "^0.11.0",
-    "url-template": "^2.0.8"
+    "url-template": "^2.0.8",
+    "@ava/babel-preset-stage-4": "^1.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   },
   "devDependencies": {
-    "@ava/babel-preset-stage-4": "^1.0.0",
     "ava": "^0.18.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
     "babel-plugin-transform-es5-property-mutators": "^6.24.1",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-google": "^0.7.1",
