--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aws-api-gateway-client",
-  "version": "0.2.7",
+  "version": "0.2.7a",
   "description": "A moduel for AWS API Gateway client",
   "repository": {
     "type": "git",
@@ -68,16 +68,16 @@
     }
   },
   "dependencies": {
+    "@ava/babel-preset-stage-4": "^1.0.0",
     "axios": "^0.16.1",
     "axios-retry": "^1.2.0",
-    "crypto-js": "^3.1.9-1",
-    "url": "^0.11.0",
-    "url-template": "^2.0.8",
-    "@ava/babel-preset-stage-4": "^1.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "crypto-js": "^3.1.9-1",
+    "url": "^0.11.0",
+    "url-template": "^2.0.8"
   },
   "devDependencies": {
     "ava": "^0.18.2",
